--- a/astronvim.yml
+++ b/astronvim.yml
@@ -92,15 +92,6 @@
               - ripgrep
             state: present
 
-        # - name: Install cargo packages
-        #   community.general.cargo:
-        #     name:
-        #       - watchexec-cli
-        #       - tree-sitter-cli
-        #     locked: true
-        #     state: present
-        #     executable: ~/.cargo/bin/cargo
-
         - name: Install lazygit
           ansible.builtin.shell:
             cmd: |
@@ -147,33 +138,45 @@
 
     - name: Install Perl for NeoVim
       block:
-        - name: Install cpan App::cpanminus
-          become: true
-          ansible.builtin.shell:
-            cmd: PERL_MM_USE_DEFAULT=1 cpan App::cpanminus
-            creates: /usr/local/bin/cpanm
-            executable: /bin/bash
-
-        - name: Add cpanm to zsh
-          ansible.builtin.blockinfile:
-            path: ~/.zshrc
-            marker: "# {mark} CPANM ANSIBLE MANAGED BLOCK"
-            block: |
-              export PNPM_HOME="/home/wsemik/.local/share/pnpm"
-              case ":$PATH:" in
-                *":$PNPM_HOME:"*) ;;
-                *) export PATH="$PNPM_HOME:$PATH" ;;
-              esac
-            state: present
-
-        - name: Install neovim cpanm module
-          become: true
+        - name: Check if Neovim::Ext is installed
+          become: false
           ansible.builtin.shell:
             cmd: |
-              . ~/.zshrc && cpanm -n Neovim::Ext
-            executable: /bin/zsh
+              set -o pipefail
+              perl -MNeovim::Ext -e 1
+            executable: /bin/bash
+          register: neovim_perl_installed
           changed_when: false
           failed_when: false
+
+        - name: Install cpan NeoVim::Ext
+          when: neovim_perl_installed.rc != 0
+          become: false
+          ansible.builtin.shell:
+            cmd: PERL_MM_USE_DEFAULT=1 cpan -T Neovim::Ext
+            executable: /bin/bash
+          register: neovim_perl_installed
+          changed_when: neovim_perl_installed.rc == 0
+
+        - name: Check if App::cpanminus is installed
+          become: false
+          ansible.builtin.shell:
+            cmd: |
+              set -o pipefail
+              perl -MApp::cpanminus -e 1
+            executable: /bin/bash
+          register: cpanm_installed
+          changed_when: false
+          failed_when: false
+
+        - name: Install cpan App::cpanminus
+          when: cpanm_installed.rc != 0
+          become: false
+          ansible.builtin.shell:
+            cmd: PERL_MM_USE_DEFAULT=1 cpan -T App::cpanminus
+            executable: /bin/bash
+          register: cpanm_installed
+          changed_when: cpanm_installed.rc == 0
 
     - name: Install Rubby for NeoVim
       block:
@@ -236,9 +239,3 @@
             name:
               - gdu
             state: present
-
-    # - name: Install bottom
-    #   become: true
-    #   ansible.builtin.apt:
-    #     deb: https://github.com/ClementTsang/bottom/releases/download/0.9.6/bottom_0.9.6_amd64.deb
-    #     state: present
