--- a/docker.yml
+++ b/docker.yml
@@ -6,17 +6,18 @@
     - name: Install required system packages # noqa: package-latest
       become: true
       ansible.builtin.apt:
-        pkg:
-          - apt-transport-https
-          - ca-certificates
-          - curl
-          - gnupg
-          - software-properties-common
-          - python3-pip
-          - virtualenv
-          - python3-setuptools
+        pkg: "{{ item }}"
         state: latest
         update_cache: true
+      loop:
+        - apt-transport-https
+        - ca-certificates
+        - curl
+        - gnupg
+        - software-properties-common
+        - python3-pip
+        - virtualenv
+        - python3-setuptools
 
     - name: Add Docker GPG apt Key
       become: true
