--- a/packages.yml
+++ b/packages.yml
@@ -6,12 +6,8 @@
     apt_packages:
       - build-essential
       - git
-      - geany
-      - git-gui
       - vim
-      - meld
       - htop
-      - keepass2
       - python3-pip
       - python3-venv
       - python3-apt
@@ -21,99 +17,11 @@
       - ffmpeg
       - tldr
       - tmux
-      - simplescreenrecorder
-      - xournalpp
-
-    snap_packages:
-      - multipass
-      - code
-      - spotify
-      - firefox
-
-    homebrew_packages:
-      - fzf
-      - ripgrep
-
-    cargo_packages:
-      - package: 'watchexec-cli'
-        binary: 'watchexec'
-      - package: 'tree-sitter-cli'
-        binary: 'tree-sitter'
-      - package: 'du-dust'
-        binary: 'dust'
-      - package: 'bottom'
-        binary: 'btm'
-      - package: 'cargo-updater'
-        binary: 'cargo-updater'
-      - package: 'bat'
-        binary: 'bat'
-      - package: 'exa'
-        binary: 'exa'
+      - curl
 
   tasks:
-    - name: Repo for Keepass2
-      ansible.builtin.apt_repository:
-        repo: ppa:ubuntuhandbook1/keepass2
-        state: present
-
     - name: Install standard apt packages
       ansible.builtin.apt:
         name: "{{ item }}"
         state: present
       loop: "{{ apt_packages }}"
-
-    - name: Install snap packages
-      become: true # Run tasks as sudo
-      community.general.snap:
-        name: "{{ item }}"
-        state: present
-        classic: true
-      loop: "{{ snap_packages }}"
-
-    - name: Update firefox to latest version # above snap install will not update to latest version if already installed
-      block:
-        - name: Kill running firefox processes
-          become: true # Run tasks as sudo
-          ansible.builtin.command: pkill firefox
-          changed_when: false
-          failed_when: false
-
-        - name: Update firefox package
-          become: true # Run tasks as sudo
-          ansible.builtin.command: snap refresh firefox
-          changed_when: false
-
-
-    - name: Install homebrew packages
-      become: false # Run tasks as normal user
-      community.general.homebrew:
-        name: "{{ item }}"
-        state: present
-      loop: "{{ homebrew_packages }}"
-
-    - name: Install fzf key bindings and fuzzy completion
-      become: false # Run tasks as normal user
-      ansible.builtin.command:
-        cmd: /home/linuxbrew/.linuxbrew/opt/fzf/install --all
-        creates: ~/.fzf.zsh
-
-    - name: Intall Alacritty
-      become: true # Run tasks as sudo. It happend that at this point it acted as normal user. Not sure why.
-      block:
-        - name: Add Alacritty repository
-          ansible.builtin.apt_repository:
-            repo: ppa:aslatter/ppa
-            state: present
-            update_cache: true
-
-        - name: Install Alacritty
-          ansible.builtin.apt:
-            name: alacritty
-            state: present
-
-    - name: Install cargo packages
-      become: false # Run tasks as normal user
-      ansible.builtin.command:
-        cmd: ~/.cargo/bin/cargo binstall -y {{ item.package }}
-        creates: ~/.cargo/bin/{{ item.binary }}
-      loop: "{{ cargo_packages }}"
