--- a/docker.yml
+++ b/docker.yml
@@ -31,16 +31,17 @@
         repo: deb https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
         state: present
 
-    - name: Update apt and install docker-ce # noqa: package-latest
+    - name: Install docker-ce # noqa: package-latest
       become: true
       ansible.builtin.apt:
         name: docker-ce
         state: latest
-        update_cache: true
 
-    - name: Install Docker Module for Python
-      ansible.builtin.pip:
-        name: docker
+    - name: Install Docker Module for Python # noqa: package-latest
+      become: true
+      ansible.builtin.apt:
+        pkg: python3-docker
+        state: latest
 
     - name: Add docker group
       become: true
