--- a/main.yml
+++ b/main.yml
@@ -69,9 +69,9 @@
   ansible.builtin.import_playbook: javascript.yml
   tags: slow
 
-- name: Install AstroNVim
-  ansible.builtin.import_playbook: astronvim.yml
-  tags: slow
+# - name: Install AstroNVim
+#   ansible.builtin.import_playbook: astronvim.yml
+#   tags: slow
 
 # - name: Install Logseq
 #   ansible.builtin.import_playbook: logseq.yml
