--- a/packages-ext.yml
+++ b/packages-ext.yml
@@ -21,20 +21,20 @@
       - ripgrep
 
     cargo_packages:
-      - package: 'watchexec-cli'
-        binary: 'watchexec'
-      - package: 'tree-sitter-cli'
-        binary: 'tree-sitter'
-      - package: 'du-dust'
-        binary: 'dust'
-      - package: 'bottom'
-        binary: 'btm'
-      - package: 'cargo-updater'
-        binary: 'cargo-updater'
-      - package: 'bat'
-        binary: 'bat'
-      - package: 'exa'
-        binary: 'exa'
+      - package: "watchexec-cli"
+        binary: "watchexec"
+      - package: "tree-sitter-cli"
+        binary: "tree-sitter"
+      - package: "du-dust"
+        binary: "dust"
+      - package: "bottom"
+        binary: "btm"
+      - package: "cargo-updater"
+        binary: "cargo-updater"
+      - package: "bat"
+        binary: "bat"
+      - package: "exa"
+        binary: "exa"
 
   tasks:
     - name: Repo for Keepass2
@@ -48,13 +48,23 @@
         state: present
       loop: "{{ apt_packages }}"
 
-    - name: Install snap packages
-      become: true # Run tasks as sudo
-      community.general.snap:
-        name: "{{ item }}"
-        state: present
-        classic: true
-      loop: "{{ snap_packages }}"
+    - name: Install and config snap packages
+      block:
+        - name: Install snap packages
+          become: true # Run tasks as sudo
+          community.general.snap:
+            name: "{{ item }}"
+            state: present
+            classic: true
+          loop: "{{ snap_packages }}"
+
+        - name: Config line for snap to enable application search
+          become: true
+          ansible.builtin.lineinfile:
+            create: true
+            path: /etc/zsh/zprofile
+            line: "emulate sh -c 'source /etc/profile.d/apps-bin-path.sh'"
+            state: present
 
     - name: Update firefox to latest version # above snap install will not update to latest version if already installed
       block:
@@ -68,7 +78,6 @@
           become: true # Run tasks as sudo
           ansible.builtin.command: snap refresh firefox
           changed_when: false
-
 
     - name: Install homebrew packages
       become: false # Run tasks as normal user
