--- a/packages.yml
+++ b/packages.yml
@@ -18,6 +18,10 @@
       - tldr
       - tmux
       - curl
+      - libfuse2t64 # required on Ubuntu 24.04 for AppImages eg cursor
+      - dconf-editor
+      - gnome-tweaks
+      - gnome-shell-extensions
 
   tasks:
     - name: Install standard apt packages
