--- a/known_hosts.yml
+++ b/known_hosts.yml
@@ -2,7 +2,7 @@
   hosts: localhost
 
   tasks:
-    - name: Install dependecies
+    - name: Install dependencies - knownhosts
       ansible.builtin.package:
         name: jq
         state: present
