--- a/brew.yml
+++ b/brew.yml
@@ -15,7 +15,7 @@
       when: not brew_installed.stat.exists
       block:
 
-        - name: Install dependecies
+        - name: Install brew dependencies
           become: true
           ansible.builtin.package:
             name: "{{ item }}"
